minor: Fix scroll on mobile
devtools: enable mobile browser console

--- a/src/app.css
+++ b/src/app.css
@@ -10,7 +10,7 @@ html {
 
 body {
   height: 100%;
-  overflow: auto;
+  overflow: none;
 }
 
 /* Login page decoration */
@@ -28,7 +28,6 @@ body {
   background-size: 200% auto;
   color: #fff;
   background-clip: text;
-  text-fill-color: transparent;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   animation: textclip 2s linear infinite;
